tests/rosetta/out/Haskell/call-a-function-11.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/call-a-function-11.hs:121:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/call-a-function-11.hs:116:1
                 /workspace/mochi/tests/rosetta/out/Haskell/call-a-function-11.hs:121:1
    |
121 | main = do
    | ^^^^
